<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">养娃宝</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_activity_textview">首页</string>
    <string name="title_activity_knowledge">KnowledgeActivity</string>
    <string name="title_activity_commerical">CommericalActivity</string>
    <string name="title_activity_comsumption">ComsumptionActivity</string>
    <string name="title_activity_collection">CollectionActivity</string>
    <string name="title_activity_circle">CircleActivity</string>
    <string name="title_activity_setting_up">SettingUpActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="knowledge_title">今日知识</string>
    <string name="title_activity_detail_knowledge">DetailKnowledgeActivity</string>
    <string name="detail_knowledge_activity_title">详细知识</string>
    <string name="detail_knowledge_activity_collect">收藏</string>
    <string name="title_login">登陆</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="black">#000000</string>
    <string name="title_activity_register_with_baby_infor">RegisterWithBabyInforActivity</string>
    <string name="childbirthday">出生日期</string>
    <string name="childsex">性别</string>
    <string name="childweight">体重</string>
    <string name="childheight">身高</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="weightunit">千克</string>
    <string name="heightunit">cm</string>
    <string name="childname">宝宝姓名</string>
    <string name="birthyear">年</string>
    <string name="birthmonth">月</string>
    <string name="birthday">日</string>
    <string name="finish">完成</string>
    <string name="school_address">学校地址</string>
    <string name="family_address">家庭住址</string>
    <string name="title_activity_detail_collection_knowledge">DetailCollectionKnowledgeActivity</string>
    <string name="title_activity_update_baby_birthday">UpdateBabyBirthdayActivity</string>
    <string name="title_activity_age_circle">AgeCircleActivity</string>
    <string name="title_activity_family_circle">FamilyCircleActivity</string>
    <string name="title_activity_school_circle">SchoolCircleActivity</string>
    <string name="title_activity_growth_dialy">GrowthDialyActivity</string>
    <string name="title_activity_detail_commerical">DetailCommericalActivity</string>
    <string name="title_activity_detail_surrounding">DetailSurroundingActivity</string>
    <string name="title_activity_update_user_infor">UpdateUserInforActivity</string>
    <string name="title_activity_age_circle_detail">AgeCircleDetailActivity</string>
    <string name="title_activity_topic_send">TopicSendActivity</string>

</resources>
